force-app/main/default/objects/nepa_decision_payload__c.object
<CustomObject>
    <description>CEQ Standard Entity — Decision Payload. Stores the structured determination data package for a completed NEPA process: ROD, FONSI, or CE Determination. Complements nepa_decision_modification__c (which tracks comment-driven changes) by capturing the final documented outcome including alternatives considered, mitigation measures, and rationale. Supports CEQ MFR #5 (Final Decision Publication) and administrative record completeness checks in NEPA_Defensibility_Gap_Checker.</description>
    <fields>
        <fullName>nepa_process__c</fullName>
        <description>The NEPA process (IndividualApplication) this decision payload documents.</description>
        <inlineHelpText>The NEPA process whose final determination this payload records.</inlineHelpText>
        <label>NEPA Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Decision Payloads</relationshipLabel>
        <relationshipName>Decision_Payloads</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nepa_decision_type__c</fullName>
        <description>The type of final determination this payload represents. ROD: Record of Decision (EIS culmination). FONSI: Finding of No Significant Impact (EA culmination). CE_Determination: Categorical Exclusion determination memo. Other: Programmatic or special-case determination.</description>
        <inlineHelpText>ROD, FONSI, CE Determination, or Other.</inlineHelpText>
        <label>Decision Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROD</fullName>
                    <label>Record of Decision (ROD)</label>
                    <description>Final agency decision issued at conclusion of an EIS. Required content: selected alternative, mitigation commitments, monitoring requirements.</description>
                </value>
                <value>
                    <fullName>FONSI</fullName>
                    <label>Finding of No Significant Impact (FONSI)</label>
                    <description>Agency determination that an EA-analyzed action will not significantly affect the quality of the human environment, precluding need for EIS.</description>
                </value>
                <value>
                    <fullName>CE_Determination</fullName>
                    <label>CE Determination</label>
                    <description>Documented finding that an action qualifies for a categorical exclusion and no extraordinary circumstances apply.</description>
                </value>
                <value>
                    <fullName>Mitigated_FONSI</fullName>
                    <label>Mitigated FONSI</label>
                    <description>FONSI conditioned on specific mitigation measures that reduce impacts below significance thresholds.</description>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <description>Programmatic determination, supplemental ROD, or other non-standard decision type.</description>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_decision_date__c</fullName>
        <description>The date the final determination was signed and issued by the responsible official.</description>
        <inlineHelpText>Date this ROD, FONSI, or CE Determination was issued.</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_selected_alternative__c</fullName>
        <description>The alternative selected in the final decision. Required in RODs per 40 CFR 1505.2(b). For FONSIs and CE Determinations, describes the proposed action as approved.</description>
        <inlineHelpText>The alternative selected or the action as approved. Required for RODs.</inlineHelpText>
        <label>Selected Alternative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_alternatives_considered__c</fullName>
        <description>Summary of alternatives analyzed in the environmental review. Supports defensibility against inadequate-alternatives litigation challenges.</description>
        <inlineHelpText>Summary of alternatives considered and why each was accepted, modified, or rejected.</inlineHelpText>
        <label>Alternatives Considered</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_mitigation_measures__c</fullName>
        <description>Specific mitigation measures committed to in the decision. Required in RODs per 40 CFR 1505.2(c). For Mitigated FONSIs, describes the mitigation that eliminates significant impacts.</description>
        <inlineHelpText>Mitigation commitments made in this decision. Include monitoring and enforcement provisions.</inlineHelpText>
        <label>Mitigation Measures</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_rationale__c</fullName>
        <description>The agency's documented rationale for the decision, including how it considered environmental impacts and public comments. Core of the administrative record for defensibility purposes.</description>
        <inlineHelpText>Agency rationale for the decision. This is the primary defensibility record.</inlineHelpText>
        <label>Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_significant_impacts__c</fullName>
        <description>For FONSIs: documents why no significant impacts were found. For RODs: summarizes unavoidable adverse impacts disclosed per 40 CFR 1505.2(c). Empty for CE Determinations where extraordinary circumstances were not triggered.</description>
        <inlineHelpText>Significant impact findings (or the basis for finding none). Required disclosure for FONSIs and RODs.</inlineHelpText>
        <label>Significant Impact Findings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_monitoring_requirements__c</fullName>
        <description>Monitoring and enforcement provisions required by the decision. RODs must include a monitoring and enforcement program for mitigation per 40 CFR 1505.3.</description>
        <inlineHelpText>Monitoring plan and enforcement requirements for mitigation commitments.</inlineHelpText>
        <label>Monitoring Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_document__c</fullName>
        <description>Salesforce ContentDocumentId (18-char) of the signed ROD, FONSI, or CE Determination document. Salesforce does not support Lookup fields to ContentDocument or ContentVersion — this Text field stores the ID for programmatic retrieval via ContentDocumentLink or SOQL on ContentVersion where ContentDocumentId = this value.</description>
        <inlineHelpText>ContentDocumentId of the signed decision document. Query ContentVersion WHERE ContentDocumentId = this value to retrieve the file.</inlineHelpText>
        <label>Decision Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_responsible_official__c</fullName>
        <description>The agency official who signed and issued this determination. Lookup to a User record for internal agency staff or a text field for external/cooperating agency officials.</description>
        <inlineHelpText>Agency official who signed this determination.</inlineHelpText>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Official</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>NEPA Decision Payloads Signed</relationshipLabel>
        <relationshipName>NEPA_Decision_Payloads_Signed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nepa_is_supplemental__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when this is a Supplemental EIS (SEIS) or Supplemental EA determination, triggered by substantial new information or changed circumstances per 40 CFR 1502.9(d).</description>
        <inlineHelpText>Check if this is a supplemental determination (SEIS or supplemental EA).</inlineHelpText>
        <label>Supplemental Determination</label>
        <type>Checkbox</type>
    </fields>
    <!-- CEQ v1.2 provenance fields — required on all entities -->
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>Version identifier for this decision payload record, incremented on each substantive update to support auditability and provenance tracking per CEQ v1.2 provenance standard.</description>
        <inlineHelpText>Record version for provenance tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>The federal agency that originated this decision payload record. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Agency that originated this record (e.g., BLM, USFS, USACE).</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>The source system from which this record was ingested or originated. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>Originating system (e.g., NEPA Register, e-NEPA, manual entry).</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>The federal agency responsible for maintaining this record's accuracy and completeness. May differ from the data source agency in interagency reviews. Required provenance field per CEQ v1.2.</description>
        <inlineHelpText>Agency responsible for this record's ongoing accuracy (may differ from source agency in joint reviews).</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>Timestamp when this record was retrieved or imported from an external source system. Required provenance field per CEQ Data and Technology Standard v1.2.</description>
        <inlineHelpText>When this record was imported from an external system, if applicable.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>NEPA Decision Payload</label>
    <nameField>
        <label>Decision Payload Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NEPA Decision Payloads</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>