force-app/main/default/objects/nepa_decision_payload__c/fields/nepa_other__c.field-meta.xml
<CustomField>
<fullName>nepa_other__c</fullName>
        <description>Extension bag for agency-specific or non-standard properties. Stores arbitrary JSON for interoperability with systems that require fields beyond the CEQ standard schema. Maps to the CEQ standard process_decision_payload.other (jsonb) property.</description>
        <inlineHelpText>JSON extension bag for additional properties not covered by the standard schema.</inlineHelpText>
        <label>Other (JSON)</label>
        <length>32768</length>
        <type>LongTextArea</type>
</CustomField>